Update the font Hind Siliguri to custom font Shurjo fetch from /home/use

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'Shurjo';
+  src: url('/ShurjoWeb_400.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Shurjo';
+  src: url('/ShurjoWeb_700.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
